--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,4 +1,6 @@
-<h2>New Book</h2>
+<section class="banner">
+    <h1>New Book</h1>
+</section>
 <form action="/books" method="POST">
     <%-include('_form_fields') %> 
     <a href="/books">Cancel</a>
