--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,10 +1,34 @@
-<h2>Search Authors</h2>
-<form action="/authors" method="GET">
-    <label>Name</label>
-    <input type="text" name="name" value="<%=searchOptions.name%> ">
-    <button type="submit">Search</button>
-</form>
+<section class="banner">
+    <h1>Search Authors</h1>
+</section>
+<section class="content">
+    <div class="content_inner">
+        <div class="form">
+            <form action="/authors" method="GET">
+                <label>Name</label>
+                <input type="text" name="name" value="<%=searchOptions.name%> ">
+                <button type="submit">Search</button>
+            </form>
+        </div>
+        <div class="boxes">            
+            <% authors.forEach(author => { %> 
+                <div class="box">
+                    <div class="box_inner">
+                        <h2 class="box_title"><%=author.name%> </h2>
+                        <div class="box_btn">
+                            <a href="/authors/<%= author.id %>" class="btn btn--primary">View</a>
+                        </div>
+                        <div class="box_btn">
+                            <a href="/authors/<%= author.id %>/edit" class="btn btn--dark">Edit</a>
+                        </div>
+                        <div class="box_btn">
+                            <%- include('../partials/deleteForm', { url: `/authors/${author.id}`}) %> 
+                        </div>
+                    </div>
+                </div>
+            <% }) %> 
+        </div>
+    </div>
+</section>
 
-<% authors.forEach(author => { %> 
-    <div><%=author.name%> </div>
-<% }) %> 
+
