--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,4 +1,6 @@
-<h2>New Author</h2>
+<section class="banner">
+    <h1>New Author</h1>
+</section>
 <form action="/authors" method="POST">
     <%-include('_form_fields') %> 
     <a href="/authors">Cancel</a>
