--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,16 @@
-<header>
-    <a href="/"><img src="/none" alt="Logo"></a>
-    <nav>
-        <ul>
-            <li><a href="/authors">Authors</a></li>
-            <li><a href="/authors/new">Add Author</a></li>  
-            <li><a href="/books">Books</a></li>
-            <li><a href="/books/new">Add Books</a></li>  
-        </ul>
-    </nav>
+<header> 
+    <div class="header_inner">
+        <div class="header_logo">
+            <a href="/"><img src="/assets/books-logo.png" alt="Logo"></a>
+            <span>Bookmania</span>
+        </div>
+        <nav class="nav nav--main">
+            <ul>
+                <li><a href="/authors">Authors</a></li>
+                <li><a href="/authors/new">Add Author</a></li>  
+                <li><a href="/books">Books</a></li>
+                <li><a href="/books/new">Add Books</a></li>  
+            </ul>
+        </nav>
+    </div>
 </header>
