--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -1,8 +1,20 @@
 <section class="banner">
     <h1>Edit Book</h1>
 </section>
-<form action="/books/<%= book.id %>?_method=PUT" method="POST">
-    <%-include('_form_fields') %> 
-    <a href="/books/<%= book.id %>">Cancel</a>
-    <button type="submit">Update</button>
-</form>
+<section class="content">
+    <div class="content_inner">
+        <div class="form">
+            <form action="/books/<%= book.id %>?_method=PUT" method="POST">
+                <div class="form_box">
+                    <%-include('_form_fields') %> 
+                    <div class="box_btn">
+                        <button type="submit" class="btn btn--primary">Update</button>
+                    </div>
+                    <div class="box_btn">
+                        <a href="/books/<%= book.id %>" class="btn btn--dark">Cancel</a>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</section>
