--- a/views/partials/deleteForm.ejs
+++ b/views/partials/deleteForm.ejs
@@ -1,3 +1,3 @@
 <form method="POST" action="<%= url %>?_method=DELETE">
-    <button type="submit" class="btn btn--delete">Delete</button>
+    <button type="submit" class="btn btn--delete" title="Delete this <%= type %>"><i class="icon-trash-empty"></i></button>
 </form>
