--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;700&display=swap');
+@import 'shared/fontello.css';
 
 :root {
     font-family: 'Work Sans', sans-serif;
     font-size: 18px;
+    --color-primary: #5f68ab;
+    --color-primary-light: #5055e8;
+    --color-dark: #252525;
+    --color-delete: #ce2d2d;
 }
 
 *, *::before, *::after {
@@ -11,7 +16,8 @@
 
 body {
     margin: 0;
-    background-color: #252525;
+    background-color: var(--color-dark);
+    color: #fff;
 }
 
 h1 {
@@ -31,7 +37,11 @@ h4 {
 }
 
 a:hover {
-    color: #5055e8;
+    color: var(--color-primary-light);
+}
+
+img {
+    max-width: 100%;
 }
 
 .btn {
@@ -65,7 +75,7 @@ a:hover {
 }
 
 .btn--delete {
-    background-color: #ce2d2d;
+    background-color: var(--color-dark);
 }
 
 .btn--delete:hover {
@@ -175,18 +185,64 @@ header .nav--main li a:hover {
     padding-right: 20px;
 }
 
+.content_left {
+    display: inline-block;
+    vertical-align: top;
+    width: 25%;
+    margin-right: -.25em;
+}
+
+.content_right {
+    display: inline-block;
+    vertical-align: top;
+    width: 75%;
+    margin-left: 0;
+    margin-right: -.25em;
+}
+
 .form {
-    background-color: #191919;
     border-radius: 10px;
-    padding: 20px;
     margin-top: 40px;
 }
 
-.form form {
+.form .form_inner {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    max-width: calc(33.33% - 40px);
+}
+
+.form .form_box {
+    width: 50%;
+    background-color: #2f2f2f;
+    padding: 20px;
+    border-radius: 10px;
+    margin: 0 auto;
+}
+
+.form.content_left .form_box {
+    width: 100%;
+}
+
+.form .form_box .form_item {
+    margin-bottom: 20px;
+}
+
+.form .form_item--1of1 {
+    width: 100%;
+}
+
+.form .form_item--1of2 {
+    width: 50%;
+}
+
+.form .form_item--1of3 {
+    width: 33.33%;
+}
+
+.form--search .form_item {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(33.33% - 15px);
 }
 
 .form label {
@@ -197,12 +253,25 @@ header .nav--main li a:hover {
     text-transform: uppercase;
 }
 
-.form input {
-    width: calc(100% - 110px);
+.form input,
+.form select,
+.form textarea {
+    width: 100%;
     border: 0;
     font-size: 18px;
-    padding: 10px 20px;
+    padding: 15px 20px;
     border-radius: 3px;
+    max-width: 100%;
+}
+
+.form input:focus,
+.form select:focus,
+.form textarea:focus {
+    outline: none;
+}
+
+.form--search input {
+    width: calc(100% - 130px);
 }
 
 .form button {
@@ -215,6 +284,11 @@ header .nav--main li a:hover {
     color: #fff;
 }
 
+.form--search button {
+    min-width: 120px;
+    margin-left: 10px;
+}
+
 .boxes {
     display: flex;
     flex-wrap: wrap;
@@ -222,20 +296,124 @@ header .nav--main li a:hover {
     padding: 40px 0;
 }
 
+.boxes.content_right {
+    display: inline-flex;
+    margin-left: 0;
+}
+
 .box {
-    width: 33.33%;
     padding-left: 20px;
+    margin-bottom: 20px;
+}
+
+.box--1of1,
+.card--1of1 {
+    width: 100%;
+}
+
+.box--1of2,
+.card--1of2 {
+    width: 50%;
+}
+
+.box--1of3,
+.card--1of3 {
+    width: 33.33%;
+}
+
+.box--1of4,
+.card--1of4 {
+    width: 25%;
+}
+
+.box--1of5,
+.card--1of5 {
+    width: 20%;
+}
+
+.box_left {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: -.25em;
+}
+
+.box_right {
+    display: inline-block;
+    vertical-align: top;
+    width: 80%;
+    margin-right: -.25em;
+    padding-left: 40px;
 }
 
 .box_inner {
-    background-color: #191919;
+    position: relative;
+    background-color: #2f2f2f;
     border-radius: 10px;
-    padding: 20px;
     height: 100%;
     min-height: 250px;
     display: flex;
     flex-wrap: wrap;
     align-content: space-between;
+    border-top: 5px solid #5f68ab;
+    border-bottom: 5px solid #5f68ab;
+    overflow: hidden;
+}
+
+.box_inner:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(25, 25, 25, 0.8);
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s ease-in-out;
+}
+
+.box_inner:hover:before {
+    opacity: 1;
+    visibility: visible;
+}
+
+.box_inner > * {
+    width: 100%;
+}
+
+.box_photo img {
+    width: 100%;
+    vertical-align: top;
+}
+
+.box_details {
+    padding: 20px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    transform: translateY(100%);
+    transition: transform .3s ease-in-out, opacity .3s ease-in-out, visibility .3s ease-in-out;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.box_inner:hover .box_details {
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible;
+    transition: transform .3s ease-in-out 0.2s, opacity .3s ease-in-out 0.2s, visibility .3s ease-in-out 0.2s;
+}
+
+.box_image {
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.box_image img {
+    vertical-align: top;
 }
 
 .box_title {
@@ -245,14 +423,143 @@ header .nav--main li a:hover {
     font-size: 30px;
 }
 
+.box_desc {
+    color: #fff;
+}
+
+.box_desc > p {
+    margin-top: 0;
+}
+
+.box_row {
+    margin-bottom: 20px;
+}
+
+.box_btns {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .box_btn {
     display: inline-block;
     vertical-align: top;
+}
+
+.box_btn--1of1 {
+    width: 100%;
+}
+
+.box_btn--1of2 {
+    width: 50%;
+}
+
+.box_btn--1of3 {
+    width: 33.33%;
 }
 
 .box_btn + .box_btn {
     padding-left: 10px;
 }
 
+.box_delete {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: auto;
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s ease-in-out;
+}
+
+.box_inner:hover .box_delete {
+    opacity: 1;
+    visibility: visible;
+}
+
+.box_delete .btn--delete {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    padding: 6px;
+    line-height: 1;
+    text-align: center;
+}
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -20px;
+    padding: 40px 0;
+}
+
+.cards.content_right {
+    display: inline-flex;
+    margin-left: 0;
+}
+
+.card {
+    padding-left: 20px;
+    padding-bottom: 20px;
+}
+
+.card .card_inner {
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.card--more .card_inner {
+    background-color: #212121;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.card img {
+    vertical-align: top;
+}
+
+.card_more {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card_more > a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    padding: 10px;
+    background-color: #5f68ab;
+    border-radius: 50%;
+    color: #fff;
+    line-height: 1;
+    box-shadow: 0 0 10px rgba(25, 25, 25, 0.5);
+}
+
+.filepond--root .filepond--panel-root {
+    background-color: rgb(70, 70, 70);
+}
+
+footer {
+    margin-top: 40px;
+    padding: 40px 0;
+    background-color: #212121;
+}
+
+footer .footer_inner {
+    display: flex;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    justify-content: center;
+    color: #848484;
+    font-size: 16px;
+}
 
 
