--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,2 +1,18 @@
-<label>Name</label>
-<input type="text" name="name" value="<%=author.name%>">
+<div class="form_inner"> 
+    <div class="form_item form_item--1of1">
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name" value="<%=author.name%>">
+    </div>
+    <div class="form_item form_item--1of1">
+        <label for="title">Title</label>
+        <input type="text" name="title" id="title" value="<%=author.title%>">
+    </div>
+    <div class="form_item form_item--1of1">
+        <label for="description">Description</label>
+        <textarea name="description" id="description" rows="12"><%= author.description %></textarea>
+    </div>
+    <div class="form_item form_item--1of1">
+        <label for="cover">Cover</label>
+        <input type="file" name="photo" id="cover" class="filepond">
+    </div>
+</div>
