--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,16 +1,34 @@
 <section class="banner">
-    <h1><%= author.name %></h1>
+    <h1>Author Details</h1>
 </section>
-<a href="/authors/<%= author.id %>/edit">Edit</a>
-<%- include('../partials/deleteForm', { url: `/authors/${author.id}`}) %> 
-<% if(booksByAuthor.length > 0) { %> 
-    <h2>Books by author</h2>
-    <div>
-        <% booksByAuthor.forEach(book => { %> 
-            <h3><%= book.title %></h3>
-            <a href="/books/<%= book.id %> ">
-                <img width="100px" height="150px" src="<%= book.coverImagePath %> ">
-            </a>
-        <% }) %> 
+<section class="content">
+    <div class="content_inner">
+        <div class="boxes">
+            <div class="box">
+                <div class="box_left">
+                    <div class="box_image">
+                        <img src="<%= author.photoPath %>" alt="<%= author.name %>">
+                    </div>
+                </div>
+                <div class="box_right">
+                    <h2 class="box_name"><%= author.name %></h2>
+                    <h3 class="box_title"><%= author.title %></h3>
+                    <div class="box_desc">
+                        <p><%= author.description %> </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a href="/authors/<%= author.id %>/edit">Edit</a>
+        <%- include('../partials/deleteForm', { url: `/authors/${author.id}`, type: 'author'}) %> 
+        <% if(booksByAuthor.length > 0) { %> 
+            <h2>Books by author</h2>
+            <% booksByAuthor.forEach(book => { %> 
+                <h3><%= book.title %></h3>
+                <a href="/books/<%= book.id %> ">
+                    <img width="100px" height="150px" src="<%= book.coverImagePath %> ">
+                </a>
+            <% }) %>
+        <% } %> 
     </div>
-<% } %> 
+</div>
