--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,32 +1,34 @@
-<div>
-    <label>Title</label>
-    <input type="text" name="title" value="<%= book.title %>">
-</div>
-<div>
-    <label>Author</label>
-    <select name="author">
-        <% authors.forEach(author => { %> 
-            <% if(author.id === book.author) { %> 
-                <option selected label="<%= author.name %>" value="<%= author.id %>">
-            <% } else { %>
-                <option label="<%= author.name %>" value="<%= author.id %>">
-            <% } %> 
-        <% }) %> 
-    </select>
-</div>
-<div>
-    <label>Publish Date</label>
-    <input type="date" name="publishDate" value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
-</div>
-<div>
-    <label>Page Count</label>
-    <input type="number" min="1" name="pageCount" value="<%= book.pageCount %>">
-</div>
-<div>
-    <label>Cover</label>
-    <input type="file" name="cover" class="filepond">
-</div>
-<div>
-    <label>Description</label>
-    <textarea name="description"><%= book.description %></textarea>
+<div class="form_inner"> 
+    <div class="form_item form_item--1of1">
+        <label for="title">Title</label>
+        <input type="text" name="title" id="title" value="<%= book.title %>">
+    </div>
+    <div class="form_item form_item--1of1">
+        <label for="author">Author</label>
+        <select name="author" id="author">
+            <% authors.forEach(author => { %> 
+                <% if(author.id === book.author) { %> 
+                    <option selected label="<%= author.name %>" value="<%= author.id %>">
+                <% } else { %>
+                    <option label="<%= author.name %>" value="<%= author.id %>">
+                <% } %> 
+            <% }) %> 
+        </select>
+    </div>
+    <div class="form_item form_item--1of1">
+        <label for="publishDate">Publish Date</label>
+        <input type="date" name="publishDate" id="publishDate" value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
+    </div>
+    <div class="form_item form_item--1of1">
+        <label for="pageCount">Page Count</label>
+        <input type="number" min="1" name="pageCount" id="pageCount" value="<%= book.pageCount %>">
+    </div>
+    <div class="form_item form_item--1of1">
+        <label for="description">Description</label>
+        <textarea name="description" id="description" rows="12"><%= book.description %></textarea>
+    </div>
+    <div class="form_item form_item--1of1">
+        <label for="cover">Cover</label>
+        <input type="file" name="cover" id="cover" class="filepond">
+    </div>
 </div>
