--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -15,10 +15,11 @@
     <title>My Brary</title>
 </head>
 <body>
-    <div class="layout">
+    <div class="layout layout">
         <%- include('../partials/header.ejs') %> 
         <%- include('../partials/errorMessage.ejs') %> 
         <%- body %>
+        <%- include('../partials/footer.ejs') %> 
     </div>
 </body>
 </html>
