--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,7 +1,7 @@
 <section class="banner">
     <h1><%= book.title %></h1>
 </section>
-<section class="content">
+<section class="content content--details">
     <div class="content_inner">
         <div class="boxes">
             <div class="box_left">
