--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <div class="content_inner">
         <div class="cards">
         <% books.forEach(book => { %> 
-            <div class="card">
+            <div class="card card--1of5">
                 <div class="card_inner">
                     <a href="/books/<%= book.id %>">
                         <img src="<%= book.coverImagePath %>" alt="Cover">
