--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -24,7 +24,8 @@
                             <img src="<%= author.photoPath %>" alt="Photo">
                         </div> 
                         <div class="box_details">
-                            <h2 class="box_title"><%= author.name %> </h2>
+                            <h2 class="box_name"><%= author.name %></h2>
+                            <h4 class="box_title"><%= author.title %></h4>
                             <div class="box_desc">
                                 <p><%= author.shortDescription %></p>
                             </div>
