--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -11,8 +11,10 @@
                     </div>
                 </div>
                 <div class="box_right">
-                    <h2 class="box_name"><%= author.name %></h2>
-                    <h3 class="box_title"><%= author.title %></h3>
+                    <div class="box_person">
+                        <h2 class="box_name"><%= author.name %></h2>
+                        <h4 class="box_title"><%= author.title %></h4>
+                    </div>
                     <div class="box_desc">
                         <p><%= author.description %> </p>
                     </div>
