--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -24,16 +24,22 @@
                 </div>
             </form>
         </div>
-        <div class="cards content_right">  
-        <% books.forEach(book => { %>
-            <div class="card card--1of4">
-                <div class="card_inner"> 
-                    <a href="/books/<%= book.id %>">
-                        <img src="<%= book.coverImagePath %> ">
-                    </a>
+        <div class="cards content_right">
+            <% if(books.length > 0){ %>   
+                <% books.forEach(book => { %>
+                    <div class="card card--1of4">
+                        <div class="card_inner"> 
+                            <a href="/books/<%= book.id %>">
+                                <img src="<%= book.coverImagePath %> ">
+                            </a>
+                        </div>
+                    </div>
+                <% }) %> 
+            <% } else { %> 
+                <div class="no-item-found">
+                    <p>No book have been added yet, click <a href="/books/new">here</a> to add one</p>
                 </div>
-            </div>
-        <% }) %> 
+            <% } %> 
         </div>
     </div>
 </section>
