--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,14 +1,12 @@
-<header> 
-    <div class="header_inner">
-        <div class="header_logo">
-            <a href="/"><img src="/assets/books-logo.png" alt="Logo"></a>
-            <span>Bookmania</span>
-        </div>
-        <%- include('../partials/nav.ejs', {className: 'nav--desktop'}) %>
-        <div class="header_toggle">
-            <button class="header_toggle-btn">
-                <span class="header_toggle-bar"></span>
-            </button>
-        </div> 
+<div class="header_inner">
+    <div class="header_logo">
+        <a href="/"><img src="/assets/books-logo.png" alt="Logo" /></a>
+        <span>Bookmania</span>
     </div>
-</header>
+    <%- include('../partials/nav.ejs', {className: 'nav--desktop'}) %>
+    <div class="header_toggle">
+        <button class="header_toggle-btn">
+            <span class="header_toggle-bar"></span>
+        </button>
+    </div> 
+</div>
