--- a/public/style/main.css
+++ b/public/style/main.css
@@ -427,6 +427,12 @@ header .header_toggle-bar:after {
     outline: none;
 }
 
+.form_error {
+    color: #d23939;
+    padding-bottom: 20px;
+    font-size: 20px;
+}
+
 .form--search input {
     width: calc(100% - 130px);
 }
