--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -6,6 +6,7 @@
         <div class="form content_left">
             <form action="/authors" method="GET">
                 <div class="form_box">
+                    <div class="form_error"><%- include('../partials/errorMessage.ejs') %></div>
                     <div class="form_inner">
                         <div class="form_item form_item--1of1">
                             <label for="name">Name</label>
