--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -6,6 +6,7 @@
         <div class="form content_left">
             <form action="/books" method="GET">
                 <div class="form_box">
+                    <div class="form_error"><%- include('../partials/errorMessage.ejs') %></div>
                     <div class="form_inner">
                         <div class="form_item form_item--1of1">
                             <label for="title">Title</label>
